Fix code point layout problem

--- a/src/App/style.module.css
+++ b/src/App/style.module.css
@@ -140,4 +140,5 @@
 }
 .codePointList {
   display: flex;
+  flex-wrap: wrap;
 }
